Update Private Law Staff Test